@@ -1827,6 +1827,7 @@ AC_CONFIG_FILES([
    cachegrind/tests/Makefile
    cachegrind/tests/x86/Makefile
    cachegrind/cg_annotate
+   cachegrind/cg_diff
    callgrind/Makefile
    callgrind/callgrind_annotate
    callgrind/callgrind_control
